# aegis

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  bspgen.sh  build.sh  client.sh  configure.sh  engine.sh  latencysim-macos.sh  server.sh  tests.sh  tpkgen.sh  wp3d.sh
Assets/: New Terrain.asset  RandomStartDelay.cs
Assets/Enviornments/: NewLayer.terrainlayer  NewMaxico.mat
Assets/MapLoader/: LoadMap.cs
Assets/Maps/: testmap.map
Assets/Missiles/: Explode.mat  Explosion.prefab  ExplosionAudio.cs  Missile.cs  Missile.prefab
Assets/Scenes/: SampleScene.unity
Assets/Screen/: CameraTexture.renderTexture  StretchToAspectRatio.cs
Assets/Tank/: Fire.cs  LookAtMouse.cs  PlayerActions.cs  PlayerActions.inputactions  Shockwave.cs  ShockwaveAnimation.anim  ShockwaveFinishEvent.cs  TankColor.mat  shockwave_0.controller  shockwave_0.prefab
Assets/Utils/: RotateTerrain.cs
Assets/Visuals/: Entity.shader
Assets/Zombies/: Zombie.prefab  ZombieAI.cs  ZombieManager.cs
ProjectSettings/: ProjectSettings.asset
SDK/mapping/: aegis.fgd
SFML/: CMakeLists.txt
World Painter 3d/: CMakeLists.txt  imgui.ini
World Painter 3d/src/: Brush.cpp  Brush.h  Entity.cpp  Entity.h  Gui.cpp  Gui.h  Map.cpp  Map.h  Plane.cpp  Plane.h  Polygon.cpp  Polygon.h  main.cpp
assets/models/: camera.max  models.mxp  tank.max
assets/textures/: -0TEMPLATE.psd  -1NMLUSH1_indexed.psd  console.psd
bspgen/: CMakeLists.txt
bspgen/src/: BrFace.h  Brush.cpp  Brush.h  Bsp.cpp  Bsp.h  BspBuilder.cpp  BspBuilder.h  BspFace.cpp  BspFace.h  BspNode.h  BspPlane.h  BspTree.h  Csg.cpp  Csg.h  Entity.cpp  Entity.h  HullDef.cpp  HullDef.h  Portals.cpp  Portals.h  TexInfo.h  Write.cpp  Write.h  main.cpp
bsplib/: CMakeLists.txt
bsplib/public/: bsplib.h
bsplib/src/: BspFile.cpp
build tools/awol/: AegisBuildTools.sln  Awol.make  Awol.vcxproj  Awol.vcxproj.filters  CMakeLists.txt  Makefile  aegis.qc  aegis.wad  main.c  premake5.lua  wadfile  wadscript.c  wadscript.h
build tools/brushstroke/: Brushstroke  CMakeLists.txt  brush.c  brush.h  brushstroketest.ent  brushstroketest.g0  brushstroketest.g1  brushstroketest.g2  brushstroketest.g3  brushstroketest.jmf  brushstroketest.jmx  brushstroketest.map  hulls.txt  hullspec.c  main.c  mapfile.c  mapfile.h  premake5.lua  zombieattack.ent  zombieattack.g0  zombieattack.g1  zombieattack.g2  zombieattack.g3  zombieattack.map
build tools/common/: New Text Document.txt  bitmap.c  bitmap.h  bspfile.c  bspfile.h  defs.h  gfile.c  gfile.h  mapdefs.h  polygon.c  polygon.h  portal.c  portal.h  textfile.c  textfile.h  vector.c  vector.h  wad.c  wad.h
build tools/exes/: Brushstroke  Partition  hulls.txt  zombieattack.ent  zombieattack.g2
build tools/typey/: CMakeLists.txt
build tools/typey/grit/: grit.qc
build tools/typey/src/: main.c
c++/Aegis/: Aegis.sln  (+5 more)
cfglib/: CMakeLists.txt
engine/: CMakeLists.txt
engine/public/engine/: Console.h  NetChan.h  Packets.h  Player.h  cl_Client.h  cl_DumbClient.h  cl_PlayerInput.h  sv_NetClient.h  sv_Server.h
engine/shaders/: compile.sh  grad.comp
engine/src/: Camera.cpp  Camera.h  Command.cpp  Command.h  Console.cpp  EntityBase.cpp  EntityBase.h  EntityCamera.cpp  EntityCamera.h  EntityPlayer.cpp  EntityPlayer.h  EntityStudio.cpp  EntityStudio.h  EntityZombie.cpp  Game.cpp  Game.h  Matrix.cpp  NavAgent.cpp  NavAgent.h  NavMesh.cpp  NavMesh.h  NetChan.cpp  Player.cpp  PlayerMove.cpp  PlayerMove.h  PolyMath.cpp  PolyMath.h  Quaternion.cpp  Quaternion.h  RasterFont.cpp  RasterFont.h  Renderer.cpp  ResourceManager.cpp  ResourceManager.h  Vector.cpp  Wad.cpp  Wad.h  WalkAgent.cpp  WalkAgent.h  Window.cpp  (+10 more)
fgdlib/: CMakeLists.txt
gamedata/: aegis.wad
glew/: CMakeLists.txt
launcher/: CMakeLists.txt
maplib/: CMakeLists.txt
maps/: testmap.bsp  testmap.jmf  testmap.jmx  testmap.map  testmap.max  zombieattack.jmf  zombieattack.jmx  zombieattack.map  zombieattack.max
mathlib/: CMakeLists.txt
parselib/: CMakeLists.txt
renderer/: CMakeLists.txt
renderer/public/renderer/: Renderer.h
renderer/src/vulkan/: CmdBuf.cpp  DescLayout.cpp  Fence.cpp  Frame.cpp  FreeImage.cpp  Image.cpp  ImplVulkan.h  Queue.cpp  Renderer.cpp  Semaphore.cpp
scriptlib/: CMakeLists.txt  aegis_script.bnf
source/Aegis/: CMakeLists.txt  CMakeSettings.json  configure.sh  debug.sh  run.sh
source/Aegis/clib/: c_string.h
source/Aegis/deadbird/gfx/: gfx.wad  wadfile
source/Aegis/deadbird/maps/: zombieattack.bsp  zombieattack.g0  zombieattack.g1  zombieattack.g2  zombieattack.g3  zombieattack_new.bsp
source/Aegis/deadbird/models/tank/: tank.mdl
source/Aegis/deadbird/models/zgrunt/: zgrunt.mdl
source/Aegis/src/: Command.cpp  Command.h  Console.cpp  Console.h  EntityBase.cpp  EntityBase.h  EntityCamera.cpp  EntityCamera.h  EntityPlayer.cpp  EntityPlayer.h  EntityStudio.cpp  EntityStudio.h  EntityZombie.cpp  EntityZombie.h  Game.cpp  Game.h  Input.cpp  Input.h  Matrix.cpp  Matrix.h  Nav.cpp  Nav.h  NavAgent.cpp  NavAgent.h  NavMesh.cpp  NavMesh.h  PolyMath.cpp  PolyMath.h  Quaternion.cpp  Quaternion.h  RasterFont.cpp  Renderer.cpp  Renderer.h  ResourceManager.cpp  ResourceManager.h  TickProperty.h  TickProperty.tpp  Vector.cpp  Vector.h  Wad.cpp  (+8 more)
source/Aegis/userdata/: autoexec.cfg
test/: testmap.bsp  testmap.map  testmap.p0  testmap.p1  testmap.p2  testmap.p3
tests/: CMakeLists.txt
tools/: abspcsgvislit.txt
tpkgen/: CMakeLists.txt
tpklib/: CMakeLists.txt
utilslib/: CMakeLists.txt
wp3d/: CMakeLists.txt
wp3d/src/: Brush.cpp  Brush.h  Entity.cpp  Entity.h  Gui.cpp  Gui.h  GuiElement.cpp  GuiElement.h  GuiElementConfigMenu.cpp  GuiElementConfigMenu.h  GuiElementEntityEditor.cpp  GuiElementEntityEditor.h  GuiElementMenuBar.cpp  GuiElementMenuBar.h  GuiElementTextureBrowser.cpp  GuiElementTextureBrowser.h  GuiElementTextureMapping.cpp  GuiElementTextureMapping.h  GuiElementToolBar.cpp  GuiElementToolBar.h  GuiElementToolSettings.cpp  GuiElementToolSettings.h  GuiElementViewport.cpp  GuiElementViewport.h  Map.cpp  Map.h  Plane.cpp  Plane.h  TextureManager.cpp  TextureManager.h  Viewport.cpp  Viewport.h  main.cpp
(+467 files in other folders)
